fix: remove overflow hidden do carrossel para exibir as bolinhas por inteiro

--- a/style.css
+++ b/style.css
@@ -302,7 +302,6 @@ header {
     position: relative;
     max-width: 1000px;
     margin: 60px auto 0;
-    overflow: hidden;
     padding: 20px 0;
 }
 
